<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".view.MovieActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/idimage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:adjustViewBounds="true"
            android:foreground="@drawable/gradient_image"
            android:scaleType="centerCrop"
            tools:layout_editor_absoluteX="-9dp"
            tools:layout_editor_absoluteY="27dp" />

        <TextView
            android:id="@+id/idTitleMovie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:letterSpacing="0.2"
            android:text="@string/title_movie"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/idimage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/idimage"
            app:layout_constraintVertical_bias="0.852" />

        <TextView
            android:id="@+id/vote_average"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:alpha="0.8"
            android:background="@drawable/rounded_textview"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"

            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            android:typeface="normal"
            app:layout_constraintBottom_toTopOf="@+id/idDescription"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/idimage"
            app:layout_constraintVertical_bias="0.962" />

        <ImageView
            android:id="@+id/icon_date"
            android:layout_width="19dp"
            android:layout_height="19dp"

            android:layout_marginTop="2dp"
            android:src="@drawable/ic_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.025"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider" />

        <TextView
            android:id="@+id/language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:alpha="0.8"
            android:background="@drawable/rounded_textview"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            android:typeface="normal"
            app:layout_constraintBottom_toTopOf="@+id/idDescription"
            app:layout_constraintEnd_toStartOf="@+id/vote_average"
            app:layout_constraintHorizontal_bias="0.978"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/idimage"
            app:layout_constraintVertical_bias="0.965" />

        <TextView
            android:id="@+id/idDescription"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:maxHeight="100dp"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            app:layout_constraintVertical_bias="0.9" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="200dp"
            android:background="@color/yellow"
            app:layout_constraintBottom_toTopOf="@+id/idDescription"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/idTitleMovie"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:letterSpacing="0.2"
            android:text="@string/overview"
            android:textAllCaps="true"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/idDescription"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/idimage"
            app:layout_constraintVertical_bias="0.967" />

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginEnd="300dp"
            android:background="@color/yellow2"
            app:layout_constraintBottom_toTopOf="@+id/idDescription"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:alpha="0.6"
            android:letterSpacing="0.2"
            android:rotation="0"
            android:rotationX="-20"
            android:rotationY="0"
            android:text="@string/current_popular_movies"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/idimage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/idDescription"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="200dp"
            android:text="@string/release_date_1_1_1991"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/icon_date"
            app:layout_constraintTop_toBottomOf="@+id/divider" />

        <ImageView
            android:id="@+id/icon_person"
            android:layout_width="19dp"
            android:layout_height="19dp"

            android:layout_marginBottom="292dp"
            android:src="@drawable/ic_person"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.025"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/icon_date"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/popularity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="308dp"
            android:layout_marginBottom="128dp"
            android:text="@string/_161354"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toTopOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/icon_person"
            app:layout_constraintTop_toBottomOf="@+id/release_date"
            app:layout_constraintVertical_bias="0.0" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/idRecyclerview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:layout_weight="4"
        android:orientation="horizontal"
        tools:listitem="@layout/movielist_row" />

</LinearLayout>